turtleart.flower.Flower.scala.error
Compilation error:
Flower:4: error: not found: value doite
    doite(45)
    ^Flower:8: error: too many arguments for method avance: (x$1: Double)Unit
  avance(65,328148244)
        ^