turtleart.flower.Flower.scala.code
override def run() {
  for (i<- 0 to 7){
    avance(50)
    doite(45)
  }
  avance(25)
  droite(90)
  avance(65,328148244)
  
  gauche(45)
  avance(25)
  gauche(45)
  avance(25)
  
}